# mobile_project

./: .gitignore  CLAUDE.md  EB_DBSCAN_EXPLANATION.md  README.md  SETUP.md  analyze_integration.py  analyze_robot_path.py  build_log.txt  gmm_social_navigation.py  make_video.py  run.md
analysis/: analyze_angle_error.py  analyze_perception.py  analyze_walk.py
src/.claude/: settings.json
src/human_detection/: package.xml  setup.py
src/human_detection/human_detection/: human_detection_node.py  social_costmap_node.py
src/mecanum_robot_sim/: CMakeLists.txt  package.xml
src/mecanum_robot_sim/config/: mecanum_drive_controller.yaml  robot_viz.rviz
src/mecanum_robot_sim/launch/: spawn_mecanum.launch.py
src/mecanum_robot_sim/scripts/: cmd_vel_relay.py  gz_pose_odom.py  human_controller.py  human_marker_publisher.py  kinematic_odom.py  odom_tf_broadcaster.py  scale_human_speed.py
src/mecanum_robot_sim/urdf/: mecanum_robot.urdf.xacro
src/mecanum_robot_sim/worlds/: crossing_humans.sdf  crossing_humans_v2.sdf  world1_static_large.sdf  world2_static_two.sdf  world3_cross_opposite.sdf  world4_cross_same.sdf  world5_human_oncoming.sdf  world6_human_ahead.sdf  world7_crowd_vertical.sdf  world8_humans_crossing.sdf  world_perc_stand.sdf  world_perc_walk.sdf
src/path_planning/: package.xml  setup.py
src/path_planning/launch/: costmap_sim.launch.py  teb_cpp.launch.py  teb_direct.launch.py  teb_human_detection.launch.py
src/path_planning/path_planning/: dbscan.py  elastic_band.py  global_path_node.py  local_costmap_node.py  path_planning_node.py  test_cmd_vel_node.py  test_teb.py
src/pure_pursuit/: package.xml  setup.py
src/pure_pursuit/pure_pursuit/: path_evaluator.py  pure_pursuit_node.py  test_path_publisher.py
src/robot_logs/: perception_log_world_perc_stand_20260526_145754.csv  perception_log_world_perc_stand_20260526_145818.csv  perception_log_world_perc_stand_20260526_145838.csv  perception_log_world_perc_stand_20260526_145848.csv  perception_log_world_perc_stand_20260526_145901.csv  perception_log_world_perc_stand_20260526_150345.csv  perception_log_world_perc_walk_20260526_144837.csv  perception_log_world_perc_walk_20260526_145436.csv  perception_log_world_perc_walk_20260526_145521.csv  perception_log_world_perc_walk_20260526_150442.csv  perception_log_world_perc_walk_20260526_150506.csv  perception_log_world_perc_walk_20260526_150536.csv  perception_log_world_perc_walk_20260526_150605.csv  perception_log_world_perc_walk_20260526_150634.csv  robot_path_crossing_humans_20260526_012622.csv  robot_path_crossing_humans_20260526_012642.csv  robot_path_crossing_humans_20260526_012649.csv  robot_path_crossing_humans_20260526_012652.csv  robot_path_crossing_humans_20260526_012654.csv  robot_path_crossing_humans_20260526_012701.csv  robot_path_crossing_humans_20260526_012707.csv  robot_path_crossing_humans_20260526_012712.csv  robot_path_crossing_humans_20260526_012933.csv  robot_path_crossing_humans_20260526_012945.csv  robot_path_crossing_humans_20260526_012950.csv  robot_path_crossing_humans_20260526_013021.csv  robot_path_crossing_humans_20260526_013032.csv  robot_path_crossing_humans_20260526_013038.csv  robot_path_crossing_humans_20260526_013115.csv  robot_path_crossing_humans_20260526_013116.csv  robot_path_crossing_humans_20260526_013535.csv  robot_path_crossing_humans_20260526_013539.csv  robot_path_crossing_humans_20260526_013542.csv  robot_path_crossing_humans_20260526_013545.csv  robot_path_crossing_humans_20260526_013550.csv  robot_path_crossing_humans_20260526_013553.csv  robot_path_crossing_humans_20260526_013603.csv  robot_path_crossing_humans_20260526_013606.csv  robot_path_crossing_humans_20260526_013607.csv  robot_path_crossing_humans_20260526_013612.csv  (+14 more)
src/robot_logs/world2/: world2_look_10.csv  world2_look_15.csv  world2_look_2.csv  world2_look_5.csv  world2_no_preroute_look5.csv
src/robot_logs/world3_back/: world3_look5.csv  world3_look5.webm
src/robot_logs/world3_delay6/: w3__delay6_look10.csv  w3__delay6_look2.csv  w3__delay6_look5.csv
src/robot_logs/world3_egg/: look5.csv
src/robot_logs/world4/: world4_look10.csv  world4_look2.csv  world4_look5.csv
src/teb_cpp_pkg/: CMakeLists.txt  package.xml
src/teb_cpp_pkg/src/: cpp_node.cpp  (+1 more)
src/teb_planner/: CMakeLists.txt  package.xml
src/teb_planner/include/teb_planner/: g2o_types.hpp  obstacles.hpp  optimal_planner.hpp  penalties.hpp  pose_se2.hpp  teb_config.hpp  timed_elastic_band.hpp
src/teb_planner/src/: optimal_planner.cpp  teb_planner_node.cpp  timed_elastic_band.cpp
videos/: Toy_Exp1_look10.webm  Toy_Exp1_look2.webm  Toy_Exp1_look_5.webm
videos/integration/: world3_integration.webm  world4_integration.webm
videos/world2/: world2_look_10.webm  world2_look_15.webm  world2_look_2.webm  world2_look_5.webm  world2_no_preroute_look5.webm
videos/world3/: w3__delay6_look10.webm  w3__delay6_look2.webm  w3__delay6_look5.webm  world3_egg_look5.webm
videos/world4/: world4_egg_look5.webm  world4_look10.webm  world4_look2.webm  world4_look5.webm
(+1 files in other folders)
