<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_planning</name>
  <version>0.1.0</version>
  <description>
    Skeleton node for collision-free path planning.
    Subscribes to odometry, goal pose, and detected human poses.
    Publishes a planned path (nav_msgs/Path) and the known static map
    (nav_msgs/OccupancyGrid) for RViz visualisation.
    Developers should replace the stub planner with A*, RRT*, DWA, etc.
  </description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
